2012-02-16 Jan Gehring <jan.gehring, gmail.com> (0.25.3)
  * fixed a display bug in rexify --search command
  * fixed a bug in the libvirt module if it gets executed local

2012-02-15 Jan Gehring <jan.gehring, gmail.com> (0.25.2)
  * display the correct module name in rexify --search command

2012-02-15 Jan Gehring <jan.gehring, gmail.com> (0.25.1)
  * don't use github for recipes query

2012-02-15 Jan Gehring <jan.gehring, gmail.com> (0.25.0)
  * added public repository commands to rexify
  * added patch from JEEN Lee for gpgcheck on yum repositories

2012-02-13 Jan Gehring <jan.gehring, gmail.com> (0.24.1)
  * fixed a dependeny bug

2012-02-10 Jan Gehring <jan.gehring, gmail.com> (0.24.0)
  * Added patches from Alexandr Ciornii for Makefile.PL and home-directory detection
  * it is now possible to use Rex as a library
  * fixed/simplified SCM module
  * added iptables flush command
  * added a simple tcp alive test
  * allow inline templates
  * cloud_instance returns vm info after create
  * added cli parameters to before/around hooks
  * fixed before/around/after hooks for lokal tasks
  * added lvm create functions

2012-01-14 Jan Gehring <jan.gehring, gmail.com> (0.23.0)
  * Redhat Enterprise Linux Support (5/6)
  * read ssh_config file
  * rsync now automatically accept keys

2012-01-04 Jan Gehring <jan.gehring, gmail.com> (0.22.0)
  * systemd service provider (for redhat and suse)
  * before, around and after hooks for tasks
  * curl: Allow connections to SSL sites without certs
  * don't override db config if no import options given
  * fixed suse detection bug
  * user: set crypted passwords
  * added OpenSuSE 12.1 compatibility
  * fixed redhat versiond detection
  * automatically use systemd service class if opensuse >= 12.1
  * added fusioninventory-agent output to the inventory module (if available)

2011-10-28 Jan Gehring <jan.gehring, gmail.com> (0.21.1)
  * fix for #8 - HOME environment variable on Windows