@@ -1,6 +1,7 @@
 rex (0.25.3) unstable; urgency=low
   * fixed a display bug in rexify --search command
   * fixed a bug in the libvirt module if it gets executed local
+  * fixed a bug in the service module for ubuntu
 
  -- Jan Gehring <jan.gehring@gmail.com>  Thu, 16 Feb 2012 19:30:00 +0200
 
